--- a/dbx-agent-bricks/02.1-improve-quality.md
+++ b/dbx-agent-bricks/02.1-improve-quality.md
@@ -23,6 +23,8 @@ Databricks Agent Bricks provides an *Improve Quality* module that lets you build
 
 👉 At this stage you only provide the **question**. The agent will answer it during evaluation.
 
+[Knowledge](/assets/knowledge7.md)
+
 ---
 
 ## 2. Feedback & Labeling
@@ -53,6 +55,10 @@ This enables collaborative and scalable evaluation.
 - `CAN QUERY` on the endpoint,  
 - `EDIT` on the MLflow experiment,  
 - `USE CATALOG`, `USE SCHEMA`, `SELECT` on the schema.  
+
+[Knowledge](/assets/knowledge8.md)
+
+[Knowledge](/assets/knowledge9.md)
 
 ---
 
