--- a/dbx-agent-bricks/02.1-improve-quality.md
+++ b/dbx-agent-bricks/02.1-improve-quality.md
@@ -23,7 +23,7 @@ Databricks Agent Bricks provides an *Improve Quality* module that lets you build
 
 👉 At this stage you only provide the **question**. The agent will answer it during evaluation.
 
-![Knowledge](./assets/knowledge7.md)
+![Knowledge](/assets/knowledge7.md)
 
 ---
 
@@ -56,9 +56,9 @@ This enables collaborative and scalable evaluation.
 - `EDIT` on the MLflow experiment,  
 - `USE CATALOG`, `USE SCHEMA`, `SELECT` on the schema.  
 
-![Knowledge](./assets/knowledge8.md)
+![Knowledge](/assets/knowledge8.md)
 
-![Knowledge](./assets/knowledge9.md)
+![Knowledge](/assets/knowledge9.md)
 
 ---
 
