--- a/dbx-agent-bricks/02.1-improve-quality.md
+++ b/dbx-agent-bricks/02.1-improve-quality.md
@@ -56,9 +56,9 @@ This enables collaborative and scalable evaluation.
 - `EDIT` on the MLflow experiment,  
 - `USE CATALOG`, `USE SCHEMA`, `SELECT` on the schema.  
 
-![Knowledge](/assets/knowledge8.md)
+![Knowledge](./assets/knowledge8.md)
 
-![Knowledge](/assets/knowledge9.md)
+![Knowledge](./assets/knowledge9.md)
 
 ---
 
